BASE_VERSION=0.28
VERSION=0.28

AC_INIT([Scriptix], 0.28, [http://www.awemud.net/bugs/submit.php])
AC_CONFIG_SRCDIR(bin/scriptix.cc)
AM_INIT_AUTOMAKE(scriptix, "$PACKAGE_VERSION")
AM_CONFIG_HEADER(include/config.h)

AC_PREREQ(2.52)

AC_SUBST(VERSION)
AC_SUBST(BASE_VERSION)
AC_DEFINE_UNQUOTED(SX_VERSION,"$VERSION",[Our version])

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_PATH_PROG(PATH_CCDOC,ccdoc)
AC_SUBST(PATH_CCDOC)

# don't use automake's yacc/lex support - it's totally broken for our needs
AC_PATH_PROG(PATH_BISON,bison)
if test -z "$PATH_BISON" ; then
	AC_MSG_ERROR([can't find bison])
fi
AC_PATH_PROG(PATH_FLEX,flex)
if test -z "$PATH_FLEX" ; then
	AC_MSG_ERROR([can't find flex])
fi
AC_SUBST(PATH_BISON)
AC_SUBST(PATH_FLEX)

# sizoef(void*) == sizeof(what??)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(void*)

AC_CHECK_FUNC(snprintf)
AC_CHECK_FUNC(strcasecmp)
AC_CHECK_FUNC(strdup)

AC_ARG_WITH(gc,[  --with-gc=<path>        Prefix of your GC library installation],[LDFLAGS="$LDFLAGS -L$withval/lib";GC_CFLAGS="-I$withval/include"])
AC_CHECK_LIB(gc,GC_malloc,,[AC_MSG_ERROR([Could not find suitable libgc])],-ldl)
LIBS="$LIBS -ldl"

LIBSOVER="0:3:0"
AC_SUBST(LIBSOVER)

AC_SUBST(LDFLAGS)
AC_SUBST(GC_CFLAGS)

# Docbook tools
AC_ARG_ENABLE(docs,[  --disable-docs          Disable building of documentation],BUILD_DOCS="$enableval",BUILD_DOCS=yes)
AC_ARG_ENABLE(docs,[  --enable-pdf            Enable building of PDF documentation],BUILD_PDFDOCS="$enableval",BUILD_PDFDOCS=no)
if test "x$BUILD_DOCS" = "xyes" ; then
	AC_PATH_PROG(PATH_DOCBOOK2HTML,docbook2html)
	AC_PATH_PROG(PATH_DOCBOOK2PDF,docbook2pdf)
	AC_PATH_PROG(PATH_DOCBOOK2TXT,docbook2txt)
	AC_PATH_PROG(PATH_LYNX,lynx)

	if test -n "$PATH_DOCBOOK2HTML" ; then
		DOCS="html $DOCS"
		DOCBOOK_HTML="yes"
	fi
	if test -n "$PATH_DOCBOOK2TXT" && test -n "$PATH_LYNX" ; then
		DOCS="txt $DOCS"
		DOCBOOK_TXT="yes"
	fi
	if test "x$BUILD_PDFDOCS" = "xyes" ; then
		if test -n "$PATH_DOCBOOK2PDF" ; then
			DOCS="pdf $DOCS"
			DOCBOOK_PDF="yes"
		fi
	fi

	AC_SUBST(DOCBOOK_HTML)
	AC_SUBST(DOCBOOK_TXT)
	AC_SUBST(DOCBOOK_PDF)
fi
if test "x$DOCS" = "x" ; then
	DOCS=none
fi
AM_CONDITIONAL(DOCBOOK_HTML, test "x$DOCBOOK_HTML" = "xyes")
AM_CONDITIONAL(DOCBOOK_TXT, test "x$DOCBOOK_TXT" = "xyes")
AM_CONDITIONAL(DOCBOOK_PDF, test "x$DOCBOOK_PDF" = "xyes")

AC_OUTPUT(
	Makefile
	lib/Makefile
	include/Makefile
	bin/Makefile
	bin/scriptix-conf
	doc/Makefile
	test/Makefile
	tools/Makefile
	scriptix.spec
	scriptix.pc
)

chmod +x bin/scriptix-conf
