AC_INIT([Scriptix], 0.30, [http://www.awemud.net/bugs/submit.php])
AC_CONFIG_SRCDIR(bin/scriptix.cc)
AM_INIT_AUTOMAKE(scriptix, "$PACKAGE_VERSION")
AM_CONFIG_HEADER(include/config.h)

BASE_VERSION=0.30
VERSION=0.30
INTERFACE_VERSION=0
SO_VERSION="0:2:0"

AC_PREREQ(2.52)

AC_SUBST(VERSION)
AC_SUBST(BASE_VERSION)
AC_SUBST(INTERFACE_VERSION)
AC_SUBST(SO_VERSION)
AC_DEFINE_UNQUOTED(SX_VERSION,"$VERSION",[Software version])
AC_DEFINE_UNQUOTED(SX_INTERFACE,"$INTERFACE_VERSION",[Interface version])

AC_PROG_CC
AC_HEADER_STDC
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_PATH_PROG(PATH_CCDOC,ccdoc)
AC_SUBST(PATH_CCDOC)

# expansion for sysdep.h...
if test "x$ac_cv_header_stdint_h" ; then
	HAVE_STDINT_H=1
	AC_SUBST(HAVE_STDINT_H)
fi
if test "x$ac_cv_header_inttypes_h" ; then
	HAVE_INTTYPES_H=1
	AC_SUBST(HAVE_INTTYPES_H)
fi

# don't use automake's yacc/lex support - it's totally broken for our needs
AC_PATH_PROG(PATH_BISON,bison)
if test -z "$PATH_BISON" ; then
	AC_MSG_ERROR([can't find bison])
fi
AC_PATH_PROG(PATH_FLEX,flex)
if test -z "$PATH_FLEX" ; then
	AC_MSG_ERROR([can't find flex])
fi
AC_SUBST(PATH_BISON)
AC_SUBST(PATH_FLEX)

AC_CHECK_TYPE(intptr_t,,[AC_MSG_ERROR([Type intptr_t not available])])
AC_CHECK_FUNC(snprintf)
AC_CHECK_FUNC(strcasecmp)
AC_CHECK_FUNC(strdup)

AC_ARG_WITH(gc,[  --with-gc=<path>        Prefix of your GC library installation],[LDFLAGS="$LDFLAGS -L$withval/lib";GC_CFLAGS="-I$withval/include"])
AC_CHECK_LIB(dl,dlopen,[LIBS="$LIBS -ldl"])
AC_CHECK_LIB(gc,GC_malloc,,[AC_MSG_ERROR([Could not find suitable libgc])])

AC_SUBST(LDFLAGS)
AC_SUBST(GC_CFLAGS)

# Docbook tools
AC_ARG_ENABLE(docs,[  --disable-docs          Disable building of documentation],BUILD_DOCS="$enableval",BUILD_DOCS=yes)
AC_ARG_ENABLE(docs,[  --enable-pdf            Enable building of PDF documentation],BUILD_PDFDOCS="$enableval",BUILD_PDFDOCS=no)
AC_PATH_PROG(PATH_XMLTO,xmlto)
if test "x$BUILD_DOCS" = "xyes" && test "x$PATH_XMLTO" = "x" ; then
	BUILD_DOCS=no
fi
AM_CONDITIONAL(BUILD_DOCS, test "x$BUILD_DOCS" = "xyes")
AM_CONDITIONAL(BUILD_PDF, test "x$BUILD_PDF" = "xyes")

AC_OUTPUT(
	Makefile
	lib/Makefile
	include/Makefile
	include/sysdep.h
	bin/Makefile
	doc/Makefile
	test/Makefile
	tools/Makefile
	scriptix.spec
	scriptix.pc
)

# make symlink
if ! test -d "include/scriptix" ; then
	ln -s . "include/scriptix"
fi
