includedir=${prefix}/include/scriptix-@INTERFACE_VERSION@/scriptix
include_HEADERS=\
	access.h \
	array.h \
	assoc.h \
	collectable.h \
	config.h \
	error.h \
	function.h \
	iterator.h \
	list.h \
	name.h \
	number.h \
	opcodes.h \
	parser.h \
	scriptix.h \
	stamp-h1 \
	struct.h \
	sxstring.h \
	sysdep.h \
	system.h \
	thread.h \
	type.h \
	typevalue.h \
	util.h \
	value.h \
	vimpl.h

EXTRA_DIST=sysdep.h.in
