AC_INIT(bin/scriptix.c)
AC_CONFIG_HEADER(include/config.h)

BASE_VERSION=0.22
VERSION=0.22
AC_SUBST(VERSION)
AC_SUBST(BASE_VERSION)
AC_DEFINE_UNQUOTED(SX_VERSION,"$VERSION")

AC_PROG_CC
AC_PROG_RANLIB

AC_CHECK_FUNC(snprintf)
AC_CHECK_FUNC(strcasecmp)
AC_CHECK_FUNC(strdup)

# Allow disabling of shared libraries, since they don't work on some systems.
AC_ARG_ENABLE(shared,[  --enable-shared        Enable shared libraries],SHARED="$enableval",SHARED=yes)
if test "$SHARED" = 'yes' ; then
	SHARED_LIBS="libscriptix.so.$BASE_VERSION libsxparse.so.$BASE_VERSION"
	AC_SUBST(SHARED_LIBS)
	SHARED_BIN="scriptix-shared"
	AC_SUBST(SHARED_BIN)
fi

if test "$CC" = "gcc" ; then 
	CFLAGS="$CFLAGS -Wall"
	AC_SUBST(CFLAGS)
fi

AC_OUTPUT(
	Makefile
	lib/Makefile
	bin/Makefile
	deb/Makefile
	deb/control
	bin/scriptix-conf
	scriptix.spec
)

chmod +x bin/scriptix-conf
