includedir=${prefix}/include/scriptix-@INTERFACE_VERSION@/scriptix
include_HEADERS=\
	access.h \
	array.h \
	collectable.h \
	config.h \
	error.h \
	function.h \
	iterator.h \
	name.h \
	number.h \
	opcodes.h \
	compiler.h \
	scriptix.h \
	struct.h \
	sxstring.h \
	sysdep.h \
	system.h \
	thread.h \
	type.h \
	value.h \
	vimpl.h

EXTRA_DIST=sysdep.h.in
